kubernetes/applications/n8n/postgres-statefulset-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: n8n
  labels:
    app:        postgres
    component: statefulset
spec:
  serviceName: n8n-postgres-db
  replicas: 1
  selector:
    matchLabels:
      app:        postgres
      component: statefulset
  template:
    metadata:
      labels:
        app:        postgres
        component: statefulset
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      containers:
        - name: postgres
          image: postgres:18
          ports:
            - name: postgres
              containerPort: 5432
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        storageClassName: longhorn
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
