kubernetes/applications/n8n/n8n-manifest-example.yml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
---

apiVersion: v1
kind: Service
metadata:
  name: n8n-postgres-db
  namespace: n8n
spec:
  type: ClusterIP
  selector:
    app:        postgres
    component: statefulset
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: n8n
  labels:
    app:        postgres
    component: statefulset
spec:
  serviceName: n8n-postgres-db
  replicas: 1
  selector:
    matchLabels:
      app:        postgres
      component: statefulset
  template:
    metadata:
      labels:
        app:        postgres
        component: statefulset
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      containers:
        - name: postgres
          image: postgres:18
          ports:
            - name: postgres
              containerPort: 5432
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        storageClassName: longhorn
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 192.0.2.10
          - 192.0.2.11
        searches:
            - n8n-postgres-db.svc.k3s.example.com
            - svc.k3s.example.com
            - k3s.example.com
      securityContext:
        fsGroup: 1000

      dnsPolicy: ClusterFirst

      containers:
        - name: n8n
          image: n8nio/n8n:2.6.2
          imagePullPolicy: IfNotPresent
          args:
            - start
          ports:
            - containerPort: 5678
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 2Gi
          volumeMounts:
            - name: n8n-storage
              mountPath: /home/node/.n8n
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000

      volumes:
        - name: n8n-storage
          persistentVolumeClaim:
            claimName: n8n-data-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: n8n-app
  namespace: n8n
  labels:
    app: n8n
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - name: http
      port: 5678
      targetPort: 5678
